--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -66,6 +66,7 @@
     --icon-yt: url('/assets/images/icon-yt.svg');
     --logo-hodu: url('/assets/images/Logo-hodu.png');
 
+    --icon-search: url('/assets/images/icon-search.svg');
     --icon-cart: url('/assets/images/icon-shopping-cart.svg');
     --icon-cart-2: url('/assets/images/icon-shopping-cart-2.svg');
     --icon-bag: url('/assets/images/icon-shopping-bag.svg');
