--- a/assets/css/base/layout.css
+++ b/assets/css/base/layout.css
@@ -58,10 +58,12 @@ header {
     width: 40.0rem;
     height: 4.6rem;
     padding: 0 2.2rem;
+    box-sizing: border-box;
 }
 
 .search-form input {
     flex: 1;
+    width: 100%; 
     border: none;
     outline: none;
     font-size: var(--fs-sm);
