--- a/assets/css/base/reset.css
+++ b/assets/css/base/reset.css
@@ -84,3 +84,9 @@ input {
     outline: none;       
     background: none;            
 }
+
+a {
+    color: inherit;         
+    text-decoration: none;  
+    cursor: pointer;        
+}
