--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -73,39 +73,39 @@
 
   /* 4. Icon assets */
   /* Icon 단축어 */
-    --icon-fb: url('/assets/images/icon-fb.svg');
-    --icon-insta: url('/assets/images/icon-insta.svg');
-    --icon-yt: url('/assets/images/icon-yt.svg');
-    --logo-hodu: url('/assets/images/Logo-hodu.png');
+    --icon-fb: url('.assets/images/icon-fb.svg');
+    --icon-insta: url('./assets/images/icon-insta.svg');
+    --icon-yt: url('./assets/images/icon-yt.svg');
+    --logo-hodu: url('./assets/images/Logo-hodu.png');
 
-    --icon-search: url('/assets/images/icon-search.svg');
-    --icon-cart: url('/assets/images/icon-shopping-cart.svg');
-    --icon-cart-2: url('/assets/images/icon-shopping-cart-2.svg');
-    --icon-bag: url('/assets/images/icon-shopping-bag.svg');
+    --icon-search: url('./assets/images/icon-search.svg');
+    --icon-cart: url('./assets/images/icon-shopping-cart.svg');
+    --icon-cart-2: url('./assets/images/icon-shopping-cart-2.svg');
+    --icon-bag: url('./assets/images/icon-shopping-bag.svg');
 
-    --icon-check: url('/assets/images/icon-check.svg');
-    --icon-check-on: url('/assets/images/icon-check-on.svg');
-    --icon-check-off: url('/assets/images/icon-check-off.svg');
-    --icon-check-box: url('/assets/images/check-box.svg');
-    --icon-check-fill: url('/assets/images/check-fill-box.svg');
+    --icon-check: url('./assets/images/icon-check.svg');
+    --icon-check-on: url('./assets/images/icon-check-on.svg');
+    --icon-check-off: url('./assets/images/icon-check-off.svg');
+    --icon-check-box: url('./assets/images/check-box.svg');
+    --icon-check-fill: url('./assets/images/check-fill-box.svg');
 
-    --icon-down-arrow: url('/assets/images/icon-down-arrow.svg');
-    --icon-up-arrow: url('/assets/images/icon-up-arrow.svg');
-    --icon-right-arrow: url('/assets/images/icon-right-arrow.svg');
-    --icon-swiper-1: url('/assets/images/icon-swiper-1.svg');
-    --icon-swiper-1_hover: url('/assets/images/icon-swiper-1_hover.png');
-    --icon-swiper-1_active: url('/assets/images/icon-swiper-1_active.png');
-    --icon-swiper-2: url('/assets/images/icon-swiper-2.svg');
-    --icon-swiper-2_hover: url('/assets/images/icon-swiper-2_hover.png');
-    --icon-swiper-2_active: url('/assets/images/icon-swiper-2_active.png');
+    --icon-down-arrow: url('./assets/images/icon-down-arrow.svg');
+    --icon-up-arrow: url('./assets/images/icon-up-arrow.svg');
+    --icon-right-arrow: url('./assets/images/icon-right-arrow.svg');
+    --icon-swiper-1: url('./assets/images/icon-swiper-1.svg');
+    --icon-swiper-1_hover: url('./assets/images/icon-swiper-1_hover.png');
+    --icon-swiper-1_active: url('./assets/images/icon-swiper-1_active.png');
+    --icon-swiper-2: url('./assets/images/icon-swiper-2.svg');
+    --icon-swiper-2_hover: url('./assets/images/icon-swiper-2_hover.png');
+    --icon-swiper-2_active: url('./assets/images/icon-swiper-2_active.png');
 
-    --icon-user: url('/assets/images/icon-user.svg');
-    --icon-user-2: url('/assets/images/icon-user-2.svg');
-    --icon-delete: url('/assets/images/icon-delete.svg');
-    --icon-plus: url('/assets/images/icon-plus.svg');
-    --icon-plus-line: url('/assets/images/icon-plus-line.svg');
-    --icon-minus-line: url('/assets/images/icon-minus-line.svg');
-    --icon-img: url('/assets/images/icon-img.png');
+    --icon-user: url('./assets/images/icon-user.svg');
+    --icon-user-2: url('./assets/images/icon-user-2.svg');
+    --icon-delete: url('./assets/images/icon-delete.svg');
+    --icon-plus: url('./assets/images/icon-plus.svg');
+    --icon-plus-line: url('./assets/images/icon-plus-line.svg');
+    --icon-minus-line: url('./assets/images/icon-minus-line.svg');
+    --icon-img: url('./assets/images/icon-img.png');
 
   /* Icon-size 가변 타이포 방식*/
     --icon-size-sm: clamp(1.4rem, 2vw, 1.6rem); 
