style: variable css 추가 및 표준화

--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -60,6 +60,7 @@
   /* Spacing System */
     --space-xs: 0.8rem;
     --space-sm: 1.2rem;
+    --space-form: 1.5rem;  
     --space-md: clamp(2.0rem, 2.5vw, 3.2rem); /*섹션 내 요소*/
     --space-lg: clamp(4.0rem, 5vw, 8.0rem); /*섹션 사이 간격*/
     --space-xl: clamp(8.0rem, 8vw, 12.0rem);
@@ -67,6 +68,7 @@
 
   /* Border radius */
   --radius-sm: 0.5rem; /*버튼 및 입력창*/
+  --radius-form: 1.0rem; 
   --radius-ms: 1.6rem; /*버튼*/
   --radius-md: 1.8rem; /*컨테이너, 상품 카드*/
   --radius-lg: 3.0rem; /*모달 및 배너*/
@@ -112,6 +114,8 @@
     --icon-size-md: clamp(2.0rem, 4vw, 2.4rem); /* HODU 메인 아이콘 규격 */
     --icon-size-lg: clamp(2.4rem, 5vw, 3.2rem);
 
+    --logo-size-signup: 23.0rem; 
+
   /* Icon Interaction */
     --icon-filter-hover: brightness(0.8); /* 마우스 */
     --icon-filter-active: brightness(0.6); /* 클릭 */
@@ -128,6 +132,8 @@
 
   /* padding */
     --btn-padding-v: 1.2rem;
+    --btn-padding-tab-t: 1.8rem;  
+    --btn-padding-tab-b: 2.5rem;  
     --btn-padding-h: clamp(1.6rem, 5vw, 4.0rem);
 
   /* button width&height */
