fix: 배포 환경 아이콘 경로 404 및 Mixed Content 오류 해결
- 각 페이지별 폴더 깊이 차이로 인한 아이콘 로드 실패 수정
- HTTPS 환경에서 HTTP 리소스 호출 시 발생하는 Mixed Content 경고 해결
- variables.css 및 path.js 로직의 경로 정합성 검토 및 수정

--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -103,10 +103,10 @@
     --icon-user-2: url('../../images/icon-user-2.svg');
     --icon-delete: url('../../images/icon-delete.svg');
     --icon-plus: url('../../images/icon-plus.svg');
-    --icon-plus-line: url('../../images/icon-plus-line.svg');
-    --icon-plus-line_disabled: url('../../images//icon-plus-line_disabled.svg');
-    --icon-minus-line: url('../../images/icon-minus-line.svg');
-    --icon-minus-line_disabled: url('../../images/icon-minus-line_disabled.svg');
+    --icon-plus-line: url('/open-market-project/assets/images/icon-plus-line.svg');
+    --icon-plus-line_disabled: url('/open-market-project/assets/images//icon-plus-line_disabled.svg');
+    --icon-minus-line: url('/open-market-project/assets/images/icon-minus-line.svg');
+    --icon-minus-line_disabled: url('/open-market-project/assets/images/icon-minus-line_disabled.svg');
     --icon-img: url('../../images/icon-img.svg');
 
   /* Icon-size 가변 타이포 방식*/
