chore: svg 로 수정

--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -74,19 +74,12 @@
   --radius-lg: 3.0rem; /*모달 및 배너*/
 
   /* 4. Icon assets */
-  /* Icon 단축어 */
-<<<<<<< HEAD
-    --icon-fb: url('/assets/images/icon-fb.svg');
-    --icon-insta: url('/assets/images/icon-insta.svg');
-    --icon-yt: url('/assets/images/icon-yt.svg');
-    --logo-hodu: url('/assets/images/Logo-hodu.png');
+  /* Icon 단축어 */;
     --icon-404: url('/assets/images/icon-404.png');
-=======
     --icon-fb: url('../../images/icon-fb.svg');
     --icon-insta: url('../../images/icon-insta.svg');
     --icon-yt: url('../../images/icon-yt.svg');
     --logo-hodu: url('../../images/Logo-hodu.svg');
->>>>>>> main
 
     --icon-search: url('../../images/icon-search.svg');
     --icon-cart: url('../../images/icon-shopping-cart.svg');
