style: variables css33

--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -60,7 +60,7 @@
   /* 3. layout & spacing */
   /* Container */
     --container-width: 1280px;
-    --container-padding: clamp(--space-container);
+    --container-padding: var(--space-container);
 
     --space-section: clamp(4.0rem, 5vw, 8.0rem);
     --space-container: clamp(2.0rem, 5vw, 2.2rem);
@@ -68,8 +68,7 @@
   /* Spacing System */
     --space-2xs: 0.4rem;
     --space-xs: 0.8rem;
-    --space-sm: 1.2rem;
-    --space-form: 1.5rem;  
+    --space-sm: 1.2rem; 
     --space-md: clamp(2.0rem, 2.5vw, 3.2rem); /*섹션 내 요소*/
     --space-lg: clamp(4.0rem, 5vw, 8.0rem); /*섹션 사이 간격*/
     --space-xl: clamp(8.0rem, 8vw, 12.0rem);
@@ -79,7 +78,7 @@
     --radius-xs: 0.4rem;
     --radius-sm: 0.5rem; /*버튼 및 입력창*/
     --radius-md: 1.0rem; 
-    -radius-lg: 1.6rem; /*버튼*/
+    --radius-lg: 1.6rem; /*버튼*/
     --radius-xl: 1.8rem; /*컨테이너, 상품 카드*/
     --radius-2xl: 3.0rem; /*모달 및 배너*/
     --radius-full: 50%;    /* 원형 */
@@ -201,6 +200,4 @@
   /* [추가] 기존에 작성한 코드들이 깨지지 않도록 예전 이름을 새 변수에 매핑 */
     --space-form: var(--form-gap);
     --form-space-msg: var(--form-msg-gap);
-    --btn-height-main: var(--btn-height-lg);
-    --radius-2xl: var(--radius-xl);
 }
