--- a/assets/css/pages/404.css
+++ b/assets/css/pages/404.css
@@ -68,7 +68,7 @@
   justify-content: center;
   flex: 1;
   max-width: 20rem;
-  height: var(--btn-height);
+  height: var(--btn-height-sm);
   font-size: var(--fs-md);
   font-weight: var(--fw-bold);
   text-decoration: none;
@@ -100,7 +100,7 @@
 .error-buttons .btn-secondary {
   background-color: var(--color-bg-base);
   color: var(--color-text-muted);
-  border: 1px solid var(--color-bg-border);
+  border: 1px solid var(--color-border-primary);
 }
 
 .error-buttons .btn-secondary:hover {
@@ -124,7 +124,7 @@
   }
 
   .error-title {
-    font-size: var(--fs-xxl);
+    font-size: var(--fs-3xl);
   }
 
   .error-description {
@@ -132,7 +132,7 @@
   }
 
   .error-buttons .btn {
-    height: var(--btn-height-main);
+    height: var(--btn-height-md);
   }
 }
 
