rerefactor: add detail base css & login css & html

--- a/assets/css/pages/login.css
+++ b/assets/css/pages/login.css
@@ -1,15 +1,13 @@
 body {
     justify-content: center;
     align-items: center;
-    gap: 7.0rem;
+    gap: var(--form-title-margin);
 }
 
 .login-txt {
-    font-family: var(--font-base);
     font-weight: var(--fw-medium);
     font-size: var(--fs-xl);
-    color: var(--color-text-base);
-
+    color: var(--color-text-primary);
     margin-bottom: var(--fs-lg);
 }
 
@@ -31,16 +29,15 @@ body {
 
 /* 로그인 박스 */
 .login-box {
-    border: 1px solid var(--color-bg-border);
-    border-radius: var(--radius-ms);
-    padding: 3.5rem;
-    background-color: var(--color-bg-base);
-    box-sizing: border-box;
+    border: 1px solid var(--color-border-primary);
+    border-radius: var(--radius-lg);
+    padding: var(--form-box-padding);
+    background-color: var(--color-bg-primary);
 }
 
 /* 입력 필드 */
 .input-group {
-    margin-bottom: 3.6rem;
+    margin-bottom: var(--form-input-gap);
 }
 
 /* input-group 다음에 오는 error-txt가 보일 때 (display: block), 
@@ -52,11 +49,9 @@ body {
 .input-group input {
     width: 100%;
     min-height: 6.0rem;
-    outline: none;
     border: none;
-    border-bottom: 1px solid var(--color-bg-border);
+    border-bottom: 1px solid var(--color-border-primary);
 
-    font-family: var(--font-base);
     font-weight: var(--fw-regular);
     font-size: var(--fs-md);
     color: var(--color-text-muted);
@@ -66,8 +61,6 @@ body {
     display: none; 
     text-align: left;
     margin: var(--fs-xl) 0;
-
-    font-family: var(--font-base);
     font-weight: var(--fw-medium);
     font-size: var(--fs-md);
     color: var(--color-error); 
@@ -76,22 +69,11 @@ body {
 /* 버튼 */
 .login-btn {
     width: 100%;
-    padding: var(--fs-fixed-lg);
-    
-    border: none;
-    border-radius: var(--radius-ms);
-    cursor: pointer;
-
-    font-family: var(--font-base);
+    padding: var(--fs-lg);
+    border-radius: var(--radius-lg); 
     font-weight: var(--fw-medium);
     font-size: var(--fs-md);
-    
-    color: var(--color-bg-base);
-    background-color: var(--color-primary); /* 이미지의 녹색 계열 */
-}
-
-.login-btn:hover {
-    background-color: var(--color-primary-hover);
+    color: var(--color-text-inverse);
 }
 
 /* 하단 링크 */
@@ -100,15 +82,12 @@ body {
 }
 
 .find-links a {
-    text-decoration: none;
-
-    font-family: var(--font-base);
     font-weight: var(--fw-regular);
     font-size: var(--fs-md);
-    color: var(--color-text-main);
+    color: var(--color-text-secondary);
 }
 
 .divider {
-    margin: 0 var(--space-sm);
-    color: var(--color-text-main);
+    margin: 0 var(--space-xs);
+    color: var(--color-text-secondary);
 }
