--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -178,7 +178,10 @@
     --form-gap: 1.5rem;
     --form-logo-padding-v: 4.0rem;
     --form-input-height: 5.4rem;
-    --form-input-padding-h: 1.5rem;
+    --form-input-padding-x: 1.5rem;
+    --form-box-padding: 3.5rem;  
+    --form-input-gap: 3.6rem;    
+    --form-title-margin: 7.0rem;  
     
   /* Form Icons Filter */
     --form-filter-success: invert(48%) sepia(87%) saturate(418%) hue-rotate(84deg) brightness(95%) contrast(88%);
