--- a/assets/css/components/footer.css
+++ b/assets/css/components/footer.css
@@ -1,19 +1,24 @@
 .footer-top {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 2.1rem;
+    margin-bottom: var(--footer-top-margin);
 }
 
 .footer-links {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1.4rem;
+    gap: var(--footer-link-gap);
 
     font-family: var(--font-base);
     font-weight: var(--fw-regular);
     font-size: var(--fs-sm);
-    color: var(--color-text-base);
+    color: var(--color-text-primary);
+}
+
+.footer-links a.link-bold {
+    font-weight: var(--fw-bold);
+    color: var(--color-text-primary);
 }
 
 .footer-links li:hover,
@@ -24,20 +29,22 @@
 .sns-links {
     display: flex;
     flex-direction: row;
-    gap: 1.4rem;
+    gap: var(--footer-link-gap);
 }
 
 .row-divider {
     width: 100%;
     height: 0.1rem;
-    margin-bottom: 3.0rem;
-    background-color: var(--color-bg-border);
+    margin-top: var(--footer-top-margin);
+    margin-bottom: var(--footer-divider-margin); 
+    background-color: var(--color-border-primary); 
+    display: block; 
 }
 
 .footer-info {
     display: flex;
     flex-direction: column;
-    gap: 1.0rem;
+    gap: var(--footer-info-gap);
 
     font-family: var(--font-base);
     font-weight: var(--fw-regular);
